Archive2/79/b535108ef29fb3/output
main.cpp: In function 'int main()':
main.cpp:8:27: error: 's' was not declared in this scope
     std::istringstream in(s;
                           ^
main.cpp:9:11: error: 'word' was not declared in this scope
     in >> word;
           ^
